--- a/app/views/hq/partners/index.html.erb
+++ b/app/views/hq/partners/index.html.erb
@@ -51,5 +51,6 @@
       </tbody>
     </table>
   </div>
-  <%= will_paginate %>
+  <%= will_paginate @partners %>
+  <%= page_entries_info @partners %>
 <%- end %>
